Moved Creative Tab name to .lang

--- a/src/main/resources/assets/mrt/lang/en_US.lang
+++ b/src/main/resources/assets/mrt/lang/en_US.lang
@@ -3,3 +3,6 @@ item.mrt:cardboard.name=Cardboard
 
 # Blocks
 tile.mrt:cardboardCube.name=Block of Cardboard
+
+# Creative Tabs
+itemGroup.mrt=MRT Tab
