Replaced test config object with config object that allows the enabling or disabling of BlockCardboard's flammability.

--- a/src/main/resources/assets/mrt/lang/en_US.lang
+++ b/src/main/resources/assets/mrt/lang/en_US.lang
@@ -1,3 +1,7 @@
+# Config
+general.cardboardCubeFlammable.label=Cardboard Block Flammability
+general.cardboardCubeFlammable.comment=Sets whether or not the Block of Cardboard is flammable.
+
 # Items
 item.mrt:cardboard.name=Cardboard
 
