--- a/src/main/resources/assets/mrt/lang/en_US.lang
+++ b/src/main/resources/assets/mrt/lang/en_US.lang
@@ -7,7 +7,8 @@ item.mrt:cardboard.name=Cardboard
 item.mrt:cardboardTube.name=Cardboard Tube
 
 # Blocks
-tile.mrt:cardboardCube.name=Block of Cardboard
+tile.mrt:cardboardCube.name=Cardboard Block
+tile.mrt:cardboardFrame.name=Cardboard Frame
 
 # Creative Tabs
 itemGroup.mrt=MRT Tab
